--- a/7110a-website/package.json
+++ b/7110a-website/package.json
@@ -1,7 +1,7 @@
 {
   "name": "7110a-website",
   "version": "0.1.0",
-  "homepage": "https://Ashwin-Iyer1.github.io/7110A-Website",
+  "homepage": "https://7110a.me",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
@@ -10,7 +10,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
