--- a/7110a-website/package.json
+++ b/7110a-website/package.json
@@ -2,7 +2,7 @@
   "name": "7110a-website",
   "version": "0.1.0",
   "homepage": "https://7110a.me",
-  "private": true,
+  "private": false,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
