--- a/7110a-website/package.json
+++ b/7110a-website/package.json
@@ -1,7 +1,7 @@
 {
   "name": "7110a-website",
   "version": "0.1.0",
-  "homepage": "https://7110a.me",
+  "homepage": "https://ashwin-iyer1.github.io/7110A-Website",
   "private": false,
   "dependencies": {
     "@react-three/drei": "^9.88.7",
