--- a/7110a-website/package.json
+++ b/7110a-website/package.json
@@ -9,6 +9,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "framer-motion": "^10.16.12",
     "gh-pages": "^6.0.0",
     "ghspa": "^1.0.0",
     "gltfpack": "^0.19.1",
